--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,74 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Inicio
     </ion-title>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-segment value="all">
+      <ion-segment-button value="all" (click)="choosedSegment('all')">
+        <ion-label>Servicios</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="filtro" (click)="choosedSegment('filtros')">
+        <ion-label>Filtros</ion-label>
+      </ion-segment-button>
+    </ion-segment>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+
+
+  <div *ngIf="segment=='filtros'">
+    <ion-item>
+      <ion-label style="text-align: center;">BookingID</ion-label>
+    </ion-item>
+ 
+    <ion-searchbar class="center" [(ngModel)]="searchValue" showCancelButton="focus" (ngModelChange)="buscar()">
+    </ion-searchbar>
+
+    <ion-segment style="margin-top: 1em;" value=">=">
+      <ion-segment-button value="y" (click)="choosedMethod('y')">
+        <ion-label>Y</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value=">=" (click)="choosedMethod('>=')">
+        <ion-label>>=</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="<=>" (click)="choosedMethod('<=')">
+        <ion-label>
+          <=</ion-label> </ion-segment-button>
+        
+        </ion-segment>
+
+        <ion-label></ion-label>
+          
+          
+          <ion-item>
+            <ion-label style="text-align: center; margin-top: 1em;">Precio</ion-label>
+            </ion-item>
+          
+            <ion-searchbar [(ngModel)]="precio" showCancelButton="focus" (ngModelChange)="filtrar()"></ion-searchbar>
+
   </div>
+
+  <div *ngIf="segment=='all'">
+
+    <ion-list>
+
+      <ion-item *ngFor="let booking of BookingListFiltered; let i = index">
+        <div class="col" (click)="details(i)">
+          <div class="row">
+            <h2> {{booking.bookingID}}</h2>
+
+          </div>
+          <div class="row">
+            <p style="font-size: small;"> {{booking.fecha_creacion.toDateString()}}</p>
+          </div>
+        </div>
+
+      </ion-item>
+    </ion-list>
+  </div>
+
 </ion-content>
