--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,6 +3,11 @@
     <ion-title>
       Inicio
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="salir()">
+        Salir
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
   <ion-toolbar>
     <ion-segment value="all">
